addons/calico/example/allow_all_namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:  
  name: allow-all-namespacce
  namespace: policy-demo

spec:  
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
