addons/calico/example/namespace_spilt.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-deny-all
  namespace: default

spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:  
  name: namespace-deny-all
  namespace: default

spec:  
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchExpressions:
          - key: Name
            operator: In
            values: ["default","kube-system"]
  egress:
    - to:
      - namespaceSelector:
          matchExpressions:
          - key: Name
            operator: In
            values: ["default","kube-system"]
